move credentials to ini file
also rename glob to cred

--- a/test/config.ini
+++ b/test/config.ini
@@ -2,6 +2,8 @@
 host = localhost:8081
 scheme = http
 
+cred ={"secret": "QAXUbiz2aRYTHrL951OwrA==", "id": "test1"}
+
 [urls]
 reg=$scheme://$host/0/register/
 cmd=$scheme://$host/0/cmd/$id
