--- a/test/config.ini
+++ b/test/config.ini
@@ -2,7 +2,7 @@
 host = localhost:8080
 scheme = http
 
-cred ={"secret": "QAXUbiz2aRYTHrL951OwrA==", "id": "test1"}
+#cred ={"secret": "QAXUbiz2aRYTHrL951OwrA==", "id": "test1"}
 
 [urls]
 reg=$scheme://$host/0/register/
