Fix HAWK Header processing
* Use hawk_test to emulate calls from the client using official hawk lib
* Fix to HOST header info
* More comments in the sample config
* Added proxy header pass info to nginx guide.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -8,9 +8,18 @@ db.password=test
 db.host=localhost
 db.db=test
 
-hawk.disabled=true
+# Disable Hawk Header Checks.
+#hawk.disabled=false
+# Show your work (useful for debugging why signatures aren't working.)
+#hawk.show_hash=false
+
+# Disable Auth. (defaults to user1:test1)
 auth.disabled=true
+
+# allow long form commands
 long_commands=true
+
+# Fetch the public PI hostname
 #aws.get_hostname=false
 
 #You can get a free dev account at https://www.mapbox.com/developers/
