--- a/etc/nginx/nginx.portion.conf
+++ b/etc/nginx/nginx.portion.conf
@@ -1,5 +1,12 @@
 # This is a portion of the nginx conf file
 
+    # Example that proxies call to server running in userspace, but
+    # preserves the HOST header for HAWK processing.
+    location / {
+        proxy_pass http://localhost:8080;
+        proxy_set_header Host $http_host;
+    }
+
     location /static {
         # This should point to the root directory for Where's My Fox
         root /home/user/wmf;
