Fixed register to return existing secret
* fixed smoketest HAWK header generation
* fixed index to convert UTC to microseconds
* NOTE: device should really retain secret and ignore any new secret
  returned. Bypassing this for now, but not really happy about it.

--- a/test/config.ini
+++ b/test/config.ini
@@ -2,7 +2,7 @@
 host = localhost:8080
 scheme = http
 
-#cred ={"secret": "QAXUbiz2aRYTHrL951OwrA==", "id": "test1"}
+cred ={"secret": "NK4v4Wfkk+XPj48lmyWEzw==", "id": "test1"}
 
 [urls]
 reg=$scheme://$host/0/register/
