Fix layout for mobile devices
* Set product name as config option
* Change the install dep's.
* Update README and config-sample.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -27,3 +27,14 @@ mapbox.key=mapbox.key
 
 #Set the persona audience address for login
 persona.audience=http://localhost:8080
+
+#Maximum values for numeric entries.
+#Max lock code value.
+#cmd.c.max=9999
+
+#Max ring time value.
+#cmd.r.max=10500
+
+#Max tracking time value.
+#cmd.t.max=10500
+
