Added metric to heka logger output
* Added heka controls to config file.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -8,6 +8,19 @@ db.password=test
 db.host=localhost
 db.db=test
 
+# Use Heka?
+#heka.use=true
+heka.logger_name=wmf
+#heka.sender=tcp
+#heka.server_addr=127.0.0.1:5565
+# defaults to the current os.hostname (may not be useful)
+#heka.current_host=localhost
+# Show the log caller
+#heka.show_caller=false
+# minimum log level (1:CRITICAL ... 5:DEBUG)
+#logger.filter=10
+
+
 # Disable Hawk Header Checks.
 #hawk.disabled=false
 # Show your work (useful for debugging why signatures aren't working.)
