Working map view with positioned headers and footers.

--- a/new_static/bower.json
+++ b/new_static/bower.json
@@ -9,7 +9,8 @@
     "requirejs-text": "~2.0.5",
     "modernizr": "~2.6.2",
     "mustache": "~0.8.1",
-    "requirejs-mustache": "*"
+    "requirejs-mustache": "*",
+    "normalize-css": "~3.0.0"
   },
   "devDependencies": {}
 }
