--- a/new_static/package.json
+++ b/new_static/package.json
@@ -24,7 +24,8 @@
     "load-grunt-tasks": "~0.1.0",
     "connect-livereload": "~0.2.0",
     "time-grunt": "~0.2.1",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-sass": "~0.11.0"
   },
   "engines": {
     "node": ">=0.8.0"
