Tweaking .jshint and bower/npm package versions

--- a/new_static/.gitignore
+++ b/new_static/.gitignore
@@ -1,7 +1,9 @@
-node_modules
-dist
-test/temp
-.sass-cache
-app/bower_components
-.tmp
+.grunt/
+.sass-cache/
+.tmp/
+app/bower_components/
+dist/
+node_modules/
 test/bower_components/
+test/temp/
+_SpecRunner.html
