--- a/new_static/.jshintrc
+++ b/new_static/.jshintrc
@@ -1,21 +1,21 @@
 {
-    "node": true,
-    "browser": true,
-    "esnext": true,
     "bitwise": true,
+    "browser": true,
     "camelcase": true,
     "curly": true,
     "eqeqeq": true,
+    "esnext": true,
     "immed": true,
+    "jquery": true,
     "latedef": true,
     "newcap": true,
     "noarg": true,
+    "node": true,
     "quotmark": "single",
     "regexp": true,
-    "undef": true,
-    "unused": true,
+    "smarttabs": true,
     "strict": true,
     "trailing": true,
-    "smarttabs": true,
-    "jquery": true
+    "undef": true,
+    "unused": "vars"
 }
