--- a/new_static/package.json
+++ b/new_static/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "author": "Mozilla (https://mozilla.org/)",
   "description": "",
-  "keywords": [
-    ""
-  ],
+  "keywords": [],
   "repository": {
     "type": "git",
     "url": "git@github.com:jrconlin/wmf.git"
@@ -14,37 +12,38 @@
   "bugs": "https://github.com/jrconlin/wmf/issues/",
   "license": "MPL 2.0",
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "bower install --silent",
     "start": "grunt",
     "test": "grunt test",
-    "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS"
+    "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS",
+    "clean": "rm -rf {node_modules,app/bower_components} && npm install --silent"
   },
   "dependencies": {
   },
   "devDependencies": {
-    "connect-livereload": "0.3.2",
+    "connect-livereload": "0.4.0",
     "grunt": "0.4.4",
-    "grunt-bower-requirejs": "0.9.2",
+    "grunt-bower-requirejs": "0.10.0",
     "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-concat": "0.3.0",
+    "grunt-contrib-concat": "0.4.0",
     "grunt-contrib-connect": "0.7.1",
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-htmlmin": "0.2.0",
-    "grunt-contrib-imagemin": "0.5.0",
-    "grunt-contrib-jasmine": "0.6.1",
-    "grunt-contrib-jshint": "0.9.2",
+    "grunt-contrib-htmlmin": "0.3.0",
+    "grunt-contrib-imagemin": "0.7.0",
+    "grunt-contrib-jasmine": "0.6.4",
+    "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-uglify": "0.4.0",
-    "grunt-contrib-watch": "0.6.0",
+    "grunt-contrib-watch": "0.6.1",
     "grunt-jscs-checker": "0.4.3",
     "grunt-open": "0.2.3",
-    "grunt-requirejs": "0.4.1",
+    "grunt-requirejs": "0.4.2",
     "grunt-rev": "0.1.0",
     "grunt-sass": "0.12.1",
-    "grunt-usemin": "2.0.2",
-    "jshint-stylish": "0.1.5",
+    "grunt-usemin": "2.1.1",
+    "jshint-stylish": "0.2.0",
     "load-grunt-tasks": "0.4.0",
-    "time-grunt": "0.2.10"
+    "time-grunt": "0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
