--- a/new_static/package.json
+++ b/new_static/package.json
@@ -20,7 +20,6 @@
     "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS"
   },
   "dependencies": {
-    "grunt-jscs-checker": "^0.4.3"
   },
   "devDependencies": {
     "connect-livereload": "0.3.2",
@@ -38,6 +37,7 @@
     "grunt-contrib-jshint": "0.9.2",
     "grunt-contrib-uglify": "0.4.0",
     "grunt-contrib-watch": "0.6.0",
+    "grunt-jscs-checker": "0.4.3",
     "grunt-open": "0.2.3",
     "grunt-requirejs": "0.4.1",
     "grunt-rev": "0.1.0",
