--- a/new_static/.jscsrc
+++ b/new_static/.jscsrc
@@ -1,26 +1,26 @@
 {
-    "disallowKeywords": ["with", "eval"],
-    "disallowKeywordsOnNewLine": ["else"],
-    "disallowLeftStickedOperators": ["?", "/", "*", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
-    "disallowMixedSpacesAndTabs": true,
-    "disallowMultipleLineStrings": true,
-    "disallowRightStickedOperators": ["?", "/", "*", ":", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
-    "disallowSpaceAfterObjectKeys": true,
-    "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "+", "-"],
-    "disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
-    "maximumLineLength": 160,
-    "requireCapitalizedConstructors": true,
-    "requireCurlyBraces": ["for", "while", "do"],
-    "requireLeftStickedOperators": [","],
-    "requireLineFeedAtFileEnd": true,
-    "requireSpaceAfterKeywords": ["if", "else", "for", "while", "do", "switch", "return"],
-    "requireSpaceBeforeBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
-    // "validateIndentation": 2,
-    "validateLineBreaks": "LF",
-    "validateQuoteMarks": true,
-    "validateJSDoc": {
-        "checkParamNames": true,
-        "checkRedundantParams": true,
-        "requireParamTypes": true
-    }
+  "disallowKeywords": ["with", "eval"],
+  "disallowKeywordsOnNewLine": ["else"],
+  "disallowLeftStickedOperators": ["?", "/", "*", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
+  "disallowMixedSpacesAndTabs": true,
+  "disallowMultipleLineStrings": true,
+  "disallowRightStickedOperators": ["?", "/", "*", ":", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
+  "disallowSpaceAfterObjectKeys": true,
+  "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "+", "-"],
+  "disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
+  "maximumLineLength": 160,
+  "requireCapitalizedConstructors": true,
+  "requireCurlyBraces": ["for", "while", "do"],
+  "requireLeftStickedOperators": [","],
+  "requireLineFeedAtFileEnd": true,
+  "requireSpaceAfterKeywords": ["if", "else", "for", "while", "do", "switch", "return"],
+  "requireSpaceBeforeBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
+  "validateIndentation": 2,
+  "validateLineBreaks": "LF",
+  "validateQuoteMarks": true,
+  "validateJSDoc": {
+    "checkParamNames": true,
+    "checkRedundantParams": true,
+    "requireParamTypes": true
+  }
 }
