--- a/new_static/.jshintrc
+++ b/new_static/.jshintrc
@@ -1,21 +1,29 @@
 {
   "asi": false,
   "bitwise": true,
+  "boss": true,
   "browser": true,
-  "camelcase": true,
-  "curly": true,
+  "debug": true,
   "eqeqeq": true,
-  "es3": true,
   "esnext": true,
-  "immed": true,
+  "eqnull": false,
+  "evil": true,
+  "forin": true,
+  "freeze": true,
+  "funcscope": false,
+  "globalstrict": false,
   "jquery": true,
-  "latedef": true,
-  "newcap": true,
+  "latedef": "nofunc",
+  "loopfunc": false,
+  "maxparams": 5,
   "noarg": true,
+  "notypeof": false,
   "node": true,
-  "quotmark": "single",
+  "plusplus": true,
   "regexp": true,
+  "shadow": false,
   "strict": true,
+  "supernew": false,
   "undef": true,
   "unused": "vars"
 }
