Added first run on FxA auth

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -51,3 +51,5 @@ persona.audience=http://localhost:8080
 #Max tracking time value.
 #cmd.t.max=10500
 
+#Session cookies should use a secure secret. Ideally, a very long one.
+session.secret = YourSecretHere
