--- a/static/package.json
+++ b/static/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-concat": "0.4.0",
     "grunt-contrib-connect": "0.7.1",
     "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-csslint": "^0.2.0",
     "grunt-contrib-cssmin": "0.9.0",
     "grunt-contrib-htmlmin": "0.3.0",
     "grunt-contrib-imagemin": "0.7.0",
