Refactored device, commands, and global data.

--- a/static/.jshintrc
+++ b/static/.jshintrc
@@ -13,6 +13,7 @@
   "funcscope": false,
   "globals": {
     "alert": false,
+    "currentDevice": false,
     "define": false,
     "L": false,
     "require": false
