Add signin, signout and ws tokens
* Issue #84: added /signin/ route. UI should now point to /signin/
* Issue #83: added /signout/. This removes the user cookie
* Issue #81: added simple socket token to validate user origin.
* fixed config-sample to reflect fxa normalization
* some formatting
* added npm step to install.bash

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -35,15 +35,18 @@ auth.disabled=true
 
 # For FirefoxAccounts (FxA):
 # OAuth Endpoint to use:
-#oauth.endpoint=https://oauth.accounts.firefox.com/v1
+#fxa.endpoint=https://oauth.accounts.firefox.com/v1
 # OAuth Login endpoint:
-#oauth.login=https://oauth.accounts.firefox.com/v1
+#fxa.login=https://oauth.accounts.firefox.com/v1
+# FMD FxA login pattern
+#  Variables: Host = fxa.login; ClientId = fxa.client_id; State = internal
+#fxa.login_url={{.Host}}?client_id={{.ClientId}}&state={{.State}}&action=signin&scope=profile:email
 # Registered local callback path for OAuth login
-#oauth.redir_uri=/authr
+#fxa.redir_uri=/oauth
 # Registered Client ID
-#oauth.client_id=
+#fxa.client_id=
 # Registered Client Secret
-#oauth.client_secret
+#fxa.client_secret
 # Firefox Accounts Content endpoint
 #fxa.content.endpoint=https://profile.accounts.firefox.com/v1
 
