Added config option to specify static dir location
* Still presumes "/static..." URI path for static files.
* document_root will allow users to specify relative or full path.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -2,6 +2,9 @@ host=0.0.0.0
 port=8080
 #Hostname to use for the websocket connection
 ws_hostname = localhost:8080
+# Root for the application main page
+# (i.e., for grunt builds, this may be ./static/dist/app)
+#document_root = ./static/app/
 
 db.user=test
 db.password=test
