Fix to socket updates
* Fix to use correct deviceID when generating map
* Added new items to config-sample.ini
* Added stripper to getDevFromUrl

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -33,14 +33,22 @@ auth.disabled=true
 # use Persona/BrowserID login
 # Default is to use FirefoxAccount login
 #auth.persona=false
+# Take the audience from the assertion
+#auth.audience_from_assertion=false
+
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
 
+
 # For FirefoxAccounts (FxA):
-# OAuth Endpoint to use:
-#fxa.endpoint=https://oauth.accounts.firefox.com/v1
 # OAuth Login endpoint:
 #fxa.login=https://oauth.accounts.firefox.com/v1
+# OAuth Token Server address
+#fxa.token=https://oaauth.accounts.firefox.com/v1/token
+# Audience for FxA (unless auth.audience_from_assertion is true)
+#fxa.audience=http://host:port
+# Token Verifier address
+#fxa.verifier=https://verifier.accounts.firefox.com/v2/
 # FMD FxA login pattern
 #  Variables: Host = fxa.login; ClientId = fxa.client_id; State = internal
 #fxa.login_url={{.Host}}?client_id={{.ClientId}}&state={{.State}}&action=signin&scope=profile:email
