--- a/config-sample.ini
+++ b/config-sample.ini
@@ -5,6 +5,9 @@ ws_hostname = localhost:8080
 # Root for the application main page
 # (i.e., for grunt builds, this may be ./static/dist/app)
 #document_root = ./static/app/
+# for the UI, specify what protocol to use for websockets
+# (ws for plaintext; wss for TLS)
+#ws_proto=wss
 
 db.user=test
 db.password=test
