Force HAWK port from config
* stage proxy is getting the wrong port, need to force it.
* send config to the Hawk objects

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -30,6 +30,8 @@ heka.logger_name=wmf
 #hawk.disabled=false
 # Show your work (useful for debugging why signatures aren't working.)
 #hawk.show_hash=false
+# Force HAWK to use this port (useful for post proxy servers)
+#hawk.port=443
 
 # Disable Auth. (defaults to user1:test1)
 auth.disabled=true
