Optionally trim path from audience

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -40,6 +40,8 @@ auth.disabled=true
 #auth.persona=false
 # Take the audience from the assertion
 #auth.audience_from_assertion=false
+# Trim the path off the audience (if present)
+#auth.trim_audience=false
 
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
