heka: implement stdout sender
Fixes #162

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -17,6 +17,8 @@ db.db=test
 # Use Heka?
 #heka.use=true
 heka.logger_name=wmf
+# Write heka protobuf to stdout? This has a higher priority than heka.sender.
+#heka.stdout=true
 #heka.sender=tcp
 #heka.server_addr=127.0.0.1:5565
 # defaults to the current os.hostname (may not be useful)
