Refactored received command. Improved logging.

--- a/static/.jshintrc
+++ b/static/.jshintrc
@@ -4,6 +4,7 @@
   "boss": true,
   "browser": true,
   "debug": true,
+  "camelcase": true,
   "eqeqeq": true,
   "esnext": true,
   "eqnull": false,
