--- a/static/bower.json
+++ b/static/bower.json
@@ -11,7 +11,8 @@
     "requirejs-mustache": "*",
     "requirejs-text": "~2.0.12",
     "underscore": "~1.6.0",
-    "typopro": "~2.0.3"
+    "typopro": "~2.0.3",
+    "reconnectingWebsocket": "*"
   },
   "devDependencies": {}
 }
