Added commit hashes for bower * dependencies.

--- a/static/bower.json
+++ b/static/bower.json
@@ -8,11 +8,11 @@
     "mustache": "~0.8.1",
     "normalize-css": "~3.0.1",
     "requirejs": "~2.1.11",
-    "requirejs-mustache": "*",
+    "requirejs-mustache": "967960075a5735a986ef6063efa9477df59f9cd5",
     "requirejs-text": "~2.0.12",
     "underscore": "~1.6.0",
     "typopro": "~2.0.3",
-    "reconnectingWebsocket": "*"
+    "reconnectingWebsocket": "6d43d26a75009a161404ac7f88beddb2ae32e057"
   },
   "devDependencies": {}
 }
