Update the config-sample.ini to include new flag.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -8,6 +8,11 @@ ws_hostname = localhost:8080
 # for the UI, specify what protocol to use for websockets
 # (ws for plaintext; wss for TLS)
 #ws_proto=wss
+# UTF8, while very nice, can be the land of XSS dragons.
+# For now, allow them, but setting the following flag to "true"
+# will restrict the lock messages to ASCII only.
+#ascii_message_only=false
+
 
 db.user=test
 db.password=test
