--- a/config-sample.ini
+++ b/config-sample.ini
@@ -8,6 +8,9 @@ ws_hostname = localhost:8080
 # for the UI, specify what protocol to use for websockets
 # (ws for plaintext; wss for TLS)
 #ws_proto=wss
+# Limit the number of webui connections (0 == system limted)
+# (NOTE: WebUI does not yet deal with this)
+#ws.max_clients=0
 # UTF8, while very nice, can be the land of XSS dragons.
 # For now, allow them, but setting the following flag to "true"
 # will restrict the lock messages to ASCII only.
@@ -86,6 +89,7 @@ long_commands=true
 
 # Fetch the public PI hostname
 #aws.get_hostname=false
+
 
 #You can get a free dev account at https://www.mapbox.com/developers/
 mapbox.key=mapbox.key
