--- a/config-sample.ini
+++ b/config-sample.ini
@@ -1,13 +1,13 @@
 host=0.0.0.0
 port=8080
 #Hostname to use for the websocket connection
-ws_hostname = localhost:8080
+ws.hostname = localhost:8080
 # Root for the application main page
 # (i.e., for grunt builds, this may be ./static/dist/app)
 #document_root = ./static/app/
 # for the UI, specify what protocol to use for websockets
 # (ws for plaintext; wss for TLS)
-#ws_proto=wss
+#ws.proto=wss
 # Limit the number of webui connections (0 == system limted)
 # (NOTE: WebUI does not yet deal with this)
 #ws.max_clients=0
