--- a/config-sample.ini
+++ b/config-sample.ini
@@ -13,7 +13,7 @@ ws.hostname = localhost:8080
 # for the UI, specify what protocol to use for websockets
 # (ws for plaintext; wss for TLS)
 #ws.proto=wss
-# Limit the number of webui connections (0 == system limted)
+# Limit the number of webui connections (0 == system limited)
 # (NOTE: WebUI does not yet deal with this)
 #ws.max_clients=0
 
