Basic Intern configuration.

--- a/static/package.json
+++ b/static/package.json
@@ -43,7 +43,8 @@
     "grunt-usemin": "2.1.1",
     "jshint-stylish": "0.2.0",
     "load-grunt-tasks": "0.4.0",
-    "time-grunt": "0.3.1"
+    "time-grunt": "0.3.1",
+    "intern": "~2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
