--- a/config-sample.ini
+++ b/config-sample.ini
@@ -99,3 +99,7 @@ mapbox.key=mapbox.key
 #cmd.r.max=10500
 #Max tracking time value.
 #cmd.t.max=10500
+
+# external bug work arounds
+# ignore reported passcode state to work around passcode cache issue
+#ek.ignore_passcode_state=false
