--- a/static/package.json
+++ b/static/package.json
@@ -44,7 +44,9 @@
     "jshint-stylish": "0.2.0",
     "load-grunt-tasks": "0.4.0",
     "time-grunt": "0.3.1",
-    "intern": "~2.0.0"
+    "intern": "~2.0.0",
+    "express": "~4.5.1",
+    "restler": "~3.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
