added an auth.secure_cookie flag to specify using HttpOnly and Secure flags when issuing Set-Cookie on the login page updated config-sample.ini to include auth.secure_cookie flag broke out activate.sh from install.bash so that GOPATH can be set independantly

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -53,6 +53,9 @@ auth.disabled=true
 # Trim the path off the audience (if present)
 #auth.trim_audience=false
 
+# Force the cookie to have Secure and HttpOnly flags set
+#auth.secure_cookie=false
+
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
 
