--- a/static/package.json
+++ b/static/package.json
@@ -46,7 +46,9 @@
     "time-grunt": "0.3.1",
     "intern": "~2.0.0",
     "express": "~4.5.1",
-    "restler": "~3.2.2"
+    "restler": "~3.2.2",
+    "pg.js": "~3.4.1",
+    "ini": "~1.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
