--- a/static/package.json
+++ b/static/package.json
@@ -13,8 +13,7 @@
   "license": "MPL 2.0",
   "scripts": {
     "postinstall": "bower install --silent",
-    "start": "grunt",
-    "test": "intern-runner config=tests/intern",
+    "test": "grunt test",
     "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS",
     "clean": "rm -rf {node_modules,app/bower_components} && npm install --silent"
   },
