Issue #235 NEW SUB VERSION
* Correct erase to not pre-emptively delete commands before pickup.
* Use FxA UserID instead of hash (NOTE: this will mean all previously
  registered devices will need to be re-registered.)
* Update version to indicate significant change

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -69,7 +69,9 @@ auth.disabled=true
 #fxa.verifier=https://verifier.accounts.firefox.com/v2/
 # FMD FxA login pattern
 #  Variables: Host = fxa.login; ClientId = fxa.client_id; State = internal
-#fxa.login_url={{.Host}}?client_id={{.ClientId}}&state={{.State}}&action=signin&scope=profile:email
+#  for scope: profile = full user profile; profile:(email|uid|...) only those elements
+#             may be combined with a space (e.g. "scope=profile:email+profile:uid")
+#fxa.login_url={{.Host}}?client_id={{.ClientId}}&state={{.State}}&action=signin&scope=profile:email%20profile:uid
 # Registered local callback path for OAuth login
 #fxa.redir_uri=/oauth
 # Registered Client ID
