--- a/config-sample.ini
+++ b/config-sample.ini
@@ -53,7 +53,9 @@ auth.disabled=true
 # Trim the path off the audience (if present)
 #auth.trim_audience=false
 # Allow the session cookie to work on non https connections
-#auth.allow_insecure_cookie=true
+#auth.allow_insecure_cookie=false
+# Disable WebSocket signature check
+#auth.disable_ws_check=false
 
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
