adding jsonlint and updating node modules

--- a/static/.jscsrc
+++ b/static/.jscsrc
@@ -2,12 +2,10 @@
   "disallowEmptyBlocks": true,
   "disallowKeywords": ["with", "eval"],
   "disallowKeywordsOnNewLine": ["else", "catch"],
-  "disallowLeftStickedOperators": ["?", "/", "*", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
   "disallowMixedSpacesAndTabs": true,
   "disallowMultipleLineBreaks": true,
   "disallowMultipleLineStrings": true,
   "disallowMultipleVarDecl": true,
-  "disallowRightStickedOperators": ["?", "/", "*", ":", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
   "disallowSpaceAfterObjectKeys": true,
   "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "+", "-"],
   "disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
@@ -21,11 +19,14 @@
   "requireCommaBeforeLineBreak": true,
   "requireCurlyBraces": ["if", "else", "for", "while", "do", "try", "catch"],
   "requireDotNotation": true,
-  "requireLeftStickedOperators": [","],
   "requireLineFeedAtFileEnd": true,
   "requireOperatorBeforeLineBreak": ["?", "+", "-", "/", "*", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
   "requireParenthesesAroundIIFE": true,
+  "requireSpaceAfterBinaryOperators": ["=", ",", "+", "-", "/", "*", "==", "===", "!=", "!=="],
   "requireSpaceAfterKeywords": ["if", "else", "for", "while", "do", "switch", "return"],
+  "requireSpaceAfterPrefixUnaryOperators": ["~"],
+  "requireSpaceBeforeBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
+  "requireSpacesInConditionalExpression": true,
 
   "safeContextKeyword": ["self"],
 
