--- a/static/package.json
+++ b/static/package.json
@@ -20,34 +20,36 @@
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "0.4.0",
-    "grunt": "0.4.4",
-    "grunt-autoprefixer": "0.7.3",
-    "grunt-bower-requirejs": "0.10.0",
+    "express": "4.6.1",
+    "grunt": "0.4.5",
+    "grunt-autoprefixer": "0.8.2",
+    "grunt-bower-requirejs": "0.11.0",
     "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-concat": "0.4.0",
-    "grunt-contrib-connect": "0.7.1",
+    "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-connect": "0.8.0",
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-csslint": "0.2.0",
-    "grunt-contrib-cssmin": "0.9.0",
+    "grunt-contrib-cssmin": "0.10.0",
     "grunt-contrib-htmlmin": "0.3.0",
-    "grunt-contrib-imagemin": "0.7.0",
+    "grunt-contrib-imagemin": "0.7.1",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-copyright": "0.1.0",
-    "grunt-jscs-checker": "0.4.3",
+    "grunt-jscs-checker": "0.6.1",
+    "grunt-jsonlint": "1.0.4",
+    "grunt-nsp-package": "0.0.5",
     "grunt-open": "0.2.3",
     "grunt-requirejs": "0.4.2",
     "grunt-rev": "0.1.0",
-    "grunt-sass": "0.12.1",
-    "grunt-usemin": "2.1.1",
-    "jshint-stylish": "0.2.0",
-    "load-grunt-tasks": "0.4.0",
-    "time-grunt": "0.3.1",
-    "intern": "2.0.0",
-    "express": "4.5.1",
-    "restler": "3.2.2",
+    "grunt-sass": "0.14.0",
+    "grunt-usemin": "2.3.0",
+    "ini": "1.2.1",
+    "intern": "2.0.1",
+    "jshint-stylish": "0.4.0",
+    "load-grunt-tasks": "0.6.0",
     "pg.js": "3.4.1",
-    "ini": "1.2.1"
+    "restler": "3.2.2",
+    "time-grunt": "0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
