--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,21 @@ language:
   - go
   # node for the front-end + tests
   - node_js
+
 go:
   # Minimum supported version of go
   - 1.3
+
 node_js:
   # Minimum supported version of node
   - 0.10.0
+
 addons:
   # Minimum supported version of PostgreSQL
   postgresql: "9.3"
   # Always use the latest version of Firefox
   firefox: "31.0"
+
 before_install:
   # Download Selenium
   - wget http://selenium-release.storage.googleapis.com/2.41/selenium-server-standalone-2.41.0.jar
@@ -22,9 +26,11 @@ before_install:
   - cd static && npm install -g vladikoff/freight#v0.4.0 && freight && cd ..
   # Install grunt globally
   - npm install -g grunt-cli
+
 install:
   # Install go dependencies and npm install
   - ./install.bash
+
 before_script:
   # Copy configuration
   - cp config-travis.ini config.ini
@@ -46,5 +52,8 @@ before_script:
   - sleep 2
   # All the script action happens in static
   - cd static
+
 script:
+  - npm run outdated
+  - grunt validate-package
   - npm test
