--- a/static/package.json
+++ b/static/package.json
@@ -15,16 +15,17 @@
     "postinstall": "bower install --silent",
     "test": "grunt",
     "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS",
-    "clean": "rm -rf {node_modules,app/bower_components} && npm install --silent"
+    "clean": "rm -rf {node_modules,app/bower_components} && npm install --silent",
+    "outdated": "npm outdated --depth 0"
   },
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "0.4.0",
-    "express": "4.6.1",
+    "express": "4.8.2",
     "grunt": "0.4.5",
-    "grunt-autoprefixer": "0.8.2",
-    "grunt-bower-requirejs": "0.11.0",
-    "grunt-contrib-clean": "0.5.0",
+    "grunt-autoprefixer": "1.0.0",
+    "grunt-bower-requirejs": "1.0.0",
+    "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "0.5.0",
     "grunt-contrib-connect": "0.8.0",
     "grunt-contrib-copy": "0.5.0",
@@ -34,7 +35,7 @@
     "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-copyright": "0.1.0",
-    "grunt-jscs-checker": "0.6.1",
+    "grunt-jscs": "0.6.2",
     "grunt-jsonlint": "1.0.4",
     "grunt-nsp-package": "0.0.5",
     "grunt-open": "0.2.3",
