--- a/static/package.json
+++ b/static/package.json
@@ -16,16 +16,18 @@
     "test": "grunt",
     "contributors": "git shortlog -s | cut -c8- | sort -f > CONTRIBUTORS",
     "clean": "rm -rf {node_modules,app/bower_components} && npm install --silent",
-    "scss-lint": "scss-lint app/styles/*.scss"
+    "scss-lint": "scss-lint app/styles/*.scss",
+    "outdated": "npm outdated --depth 0",
+    "lint": "npm run outdated && grunt validate-package --force && grunt lint"
   },
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "0.4.0",
-    "express": "4.6.1",
+    "express": "4.8.2",
     "grunt": "0.4.5",
-    "grunt-autoprefixer": "0.8.2",
-    "grunt-bower-requirejs": "0.11.0",
-    "grunt-contrib-clean": "0.5.0",
+    "grunt-autoprefixer": "1.0.0",
+    "grunt-bower-requirejs": "1.0.0",
+    "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "0.5.0",
     "grunt-contrib-connect": "0.8.0",
     "grunt-contrib-copy": "0.5.0",
@@ -36,7 +38,7 @@
     "grunt-contrib-watch": "0.6.1",
     "grunt-copyright": "0.1.0",
     "grunt-html": "1.4.0",
-    "grunt-jscs-checker": "0.6.1",
+    "grunt-jscs": "0.6.2",
     "grunt-jsonlint": "1.0.4",
     "grunt-nsp-package": "0.0.5",
     "grunt-open": "0.2.3",
