remove npm spinner and validate-package from default grunt task

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ addons:
 before_install:
   # Download Selenium
   - wget http://selenium-release.storage.googleapis.com/2.41/selenium-server-standalone-2.41.0.jar
+  # DIE SPINNER DIE
+  - npm config set spin false
   # Download Bower and npm dependencies from the Freight server
   - export FREIGHT_URL=https://freight.dev.lcip.org
   - cd static && npm install -g vladikoff/freight#v0.4.0 && freight && cd ..
