--- a/config-sample.ini
+++ b/config-sample.ini
@@ -53,9 +53,11 @@ auth.disabled=true
 # Trim the path off the audience (if present)
 #auth.trim_audience=false
 # Allow the session cookie to work on non https connections
-#auth.allow_insecure_cookie=false
+#auth.no_secure_cookie=false
 # Disable WebSocket signature check
-#auth.disable_ws_check=false
+#auth.no_ws_check=false
+# Allow no CSRF token
+#auth.no_csrftoken=false
 
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
