updating the config.sample

--- a/test/config.sample.ini
+++ b/test/config.sample.ini
@@ -7,9 +7,9 @@ scheme = http
 #assertion =
 
 # If you want to specify your own credentials (for debugging ...)
-cred ={"secret": "NK4v4Wfkk+XPj48lmyWEzw==", "id": "test1"}
+cred = {"secret": "NK4v4Wfkk+XPj48lmyWEzw==", "id": "test1"}
 
 # URL Templates for various calls
 [urls]
-reg=$scheme://$host/0/register/
-cmd=$scheme://$host/0/cmd/$id
+reg = $scheme://$host/1/register/
+cmd = $scheme://$host/1/cmd/$devid
