Move to new logging format
* Add logger.output to direct logging destination
* add json, human to default protobuf output
* set filter level to 3 instead of 10
* remove heka cruft
* added "logfile" as CLO
* removed seldom used runtime from log output
* added RawUUID to gen a bin UUID hash to store.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -22,19 +22,20 @@ db.password=test
 db.host=localhost
 db.db=test
 
-# Use Heka?
-#heka.use=true
-heka.logger_name=wmf
-# Write heka protobuf to stdout? This has a higher priority than heka.sender.
-#heka.stdout=true
-#heka.sender=tcp
-#heka.server_addr=127.0.0.1:5565
-# defaults to the current os.hostname (may not be useful)
-#heka.current_host=localhost
-# Show the log caller
-#heka.show_caller=false
 # minimum log level (1:CRITICAL ... 5:DEBUG)
-#logger.filter=10
+#logger.filter=3
+# Name to use for output logging
+#logger.logger_name=FindMyDevice
+# Format for logging output
+# NOTE: This is designed to be scraped by Heka, which would love protobuf
+#  so that's the default
+##logger.logtype=protobuf
+# If you want the output to be in JSON:
+##logger.logtype=json
+# Or if you want it trimmed down to just human readable format
+##logger.logtype=human
+# where to send logging data, (also acceptable, STDERR or a path to a file)
+#logger.output=STDOUT
 
 # Disable Hawk Header Checks.
 #hawk.disabled=false
