--- a/config-sample.ini
+++ b/config-sample.ini
@@ -43,6 +43,8 @@ db.db=test
 #hawk.show_hash=false
 # Force HAWK to use this port (useful for post proxy servers)
 #hawk.port=443
+# Number of nonces we'll track
+#hawk.nonce_cache=1000
 
 # Disable Auth. (defaults to user1:test1)
 auth.disabled=true
