--- a/config-travis.ini
+++ b/config-travis.ini
@@ -11,7 +11,7 @@ db.password=fmd
 db.host=localhost
 db.db=fmd
 
-auth.allow_insecure_cookie=true
+auth.no_secure_cookie=true
 
 hawk.disabled=true
 
