--- a/static/bower.json
+++ b/static/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "backbone": "~1.1.2",
+    "FindMyDevice-l10n": "https://github.com/nchapman/FindMyDevice-l10n.git",
     "jquery": "~1.11.1",
     "modernizr": "~2.8.1",
     "mustache": "~0.8.1",
