--- a/static/package.json
+++ b/static/package.json
@@ -49,7 +49,7 @@
     "ini": "1.2.1",
     "intern": "2.0.3",
     "jshint-stylish": "0.4.0",
-    "jsxgettext-recursive": "0.0.5",
+    "jsxgettext-recursive": "git://github.com/nchapman/jsxgettext-recursive.git",
     "load-grunt-tasks": "0.6.0",
     "mkdirp": "0.5.0",
     "pg.js": "3.4.2",
