--- a/config-sample.ini
+++ b/config-sample.ini
@@ -2,7 +2,16 @@ host=0.0.0.0
 port=8080
 # Root for the application main page
 # (i.e., for grunt builds, this may be ./static/dist/app)
-#document_root = ./static/app/
+#document.root = ./static/app/
+
+# Where the localization information for the front end lives
+# This is returned by calls to /1/l10n/client.json
+# The variables are:
+# {{.Root}} == document.root
+# {{.Lang}} == the user's Accept-Language (ordered by preference
+#              and defaulting to "en"
+#document.lang_path = {{.Root}}/l10n/{{.Lang}}/client.json
+
 # UTF8, while very nice, can be the land of XSS dragons.
 # For now, allow them, but setting the following flag to "true"
 # will restrict the lock messages to ASCII only.
