Enforce request body limits. Closes #299.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -17,6 +17,10 @@ ws.hostname = localhost:8080
 # (NOTE: WebUI does not yet deal with this)
 #ws.max_clients=0
 
+# Maximum request payload size (defaults to 1 MB). Requests
+# exceeding this limit will be rejected.
+rest.max_body_bytes=1048576
+
 db.user=test
 db.password=test
 db.host=localhost
