add the mods to config-sample.ini

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -10,7 +10,10 @@ port=8080
 # {{.Root}} == document.root
 # {{.Lang}} == the user's Accept-Language (ordered by preference
 #              and defaulting to "en"
-#document.lang_path = {{.Root}}/l10n/{{.Lang}}/client.json
+#document.lang_path_client = {{.Root}}/l10n/{{.Lang}}/client.json
+
+# Language path for the server index file
+#document.lang_path_server = {{.Root}}/l10n/{{.Lang}}/server.json
 
 # UTF8, while very nice, can be the land of XSS dragons.
 # For now, allow them, but setting the following flag to "true"
