Allow issuer to be a config option

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -97,6 +97,8 @@ auth.disabled=true
 #fxa.client_secret
 # Firefox Accounts Content endpoint
 #fxa.content.endpoint=https://profile.accounts.firefox.com/v1
+# Firefox Account Issuer
+#fxa.issuer=api.accounts.firefox.com
 
 # Session Cookie Information
 # The 32 or 64 byte key to encrypt the data
